data table editable pagination and search

--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,11 @@ body{
     background: #151719;
     margin: 5px 0px;
 }
+/* for data table */
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 105px !important;
+  margin-right: auto;
+  margin-left: auto;
+}
