--- a/css/style.css
+++ b/css/style.css
@@ -23,69 +23,10 @@
     border-radius: 50%;
 }
 
-
-
-body{
-  margin-top: 50px;
-  background-color: #f1f1f1;
-}
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
-  background-color: #17A2B8;
-}
-.dropdown-menu{
-  top: 60px;
-  right: 0px;
-  left: unset;
-  width: 460px;
-  box-shadow: 0px 5px 7px -1px #c1c1c1;
-  padding-bottom: 0px;
-  padding: 0px;
-}
-.dropdown-menu:before{
-  content: "";
-  position: absolute;
-  top: -20px;
-  right: 12px;
-  border:10px solid #343A40;
-  border-color: transparent transparent #343A40 transparent;
-}
-.head{
-  padding:5px 15px;
-  border-radius: 3px 3px 0px 0px;
-}
-.footer{
-  padding:5px 15px;
-  border-radius: 0px 0px 3px 3px;
-}
-.notification-box{
-  padding: 10px 0px;
-}
-.bg-gray{
-  background-color: #eee;
-}
-@media (max-width: 640px) {
-    .dropdown-menu{
-      top: 50px;
-      left: -16px;
-      width: 290px;
-    }
-    .nav{
-      display: block;
-    }
-    .nav .nav-item,.nav .nav-item a{
-      padding-left: 0px;
-    }
-    .message{
-      font-size: 13px;
-    }
-}
-
-
-
 #sidebar{
     position: fixed;
     width: 200px;
-    height: 850px;
+    height: 100%;
     background: mediumpurple;
     left: -200px;
     transition: all 500ms linear;
@@ -105,8 +46,17 @@ body{
 
 #sidebar ul li:hover {
   background-color: yellow;
+  color: green;
+}
+
+#sidebar a{
+    color: whitesmoke;
+}
+#sidebar ul li a:hover{
+  background-color: yellow;
   color: black;
 }
+
 
 #sidebar .toggle-btn{
     position: absolute;
@@ -122,10 +72,10 @@ body{
     margin: 5px 0px;
 }
 /* for data table */
-/* .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
   width: 100%;
   padding-right: 15px;
-  padding-left: 105px !important;
-  margin-right: auto;
-  margin-left: auto;
-} */
+  padding-left: 125px !important;
+  /*margin-right: auto;*/
+  /*margin-left: auto;*/
+}
