--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,16 @@
   /*margin-right: auto;*/
   /*margin-left: auto;*/
 }
+/* for form */
+.body {
+	padding-left: 20px;
+	background-color: #e1f5fe;
+}
+/* Scroll to Top */
+#scroll-to-top {
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  /* display: none; */
+}
