--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     padding: 0px;
     /*font-family: sans-serif;*/
     font-family: 'Lora', serif;
-
 }
 
 body {
@@ -53,6 +52,7 @@ a:focus {
     border-bottom: 1px dashed #ddd;
     margin: 40px 0;
 }
+
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
@@ -153,6 +153,7 @@ a.article:hover {
     color: #fff !important;
 }
 
+
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -163,6 +164,7 @@ a.article:hover {
     min-height: 100vh;
     transition: all 0.3s;
 }
+
 
 /* ---------------------------------------------------
     MEDIAQUERIES
@@ -181,24 +183,91 @@ a.article:hover {
 }
 
 
-#scroll-to-top {
-    cursor: pointer;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #358597;
-    color: white;
-    /* display: none; */
-}
 /* client-managemet-table-th-color */
-.table-info, .table-info>td, .table-info>th {
-    background-color:white !important;
+
+.table-info,
+.table-info>td,
+.table-info>th {
+    background-color: white !important;
 }
+
 .edit-btn {
-    color:#0171c4; 
+    color: #0171c4;
     font-size: 27px !important;
 }
+
 .delete-btn {
-    font-size: 25px !important; 
-    color:#ff4700;
+    font-size: 25px !important;
+    color: #ff4700;
 }
+
+
+/* ---------------------------------------------------
+    drop dwon style by sayket
+----------------------------------------------------- */
+
+.card-header {
+    color: #007BFF;
+}
+
+.form-group select {
+    background-color: #ffffff;
+    width: 100%;
+    min-width: 50px;
+    height: 35px;
+    min-height: 15px;
+    box-shadow: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding-left: 10px;
+}
+
+.form-group option {
+    color: black;
+    padding: 12px 16px;
+    /* display: block; */
+}
+
+.form-group option:hover {
+    background-color: #f1f1f1
+}
+
+.form-group input {
+    box-shadow: none !important;
+    width: 100%;
+    height: 100% !important;
+}
+
+.form-group textarea {
+    box-shadow: none !important;
+}
+
+.select2-container {
+    width: 100% !important;
+}
+
+.card {
+    width: 100% !important;
+    /* box-shadow: #F8F9FC; */
+}
+
+.card-body {
+    margin: 10px;
+    /* background-color: #EBEFF2; */
+}
+
+.form-row {
+    margin-top: 8px;
+}
+
+.form-group {
+    margin-right: 10px;
+}
+
+
+/* {light gray :
+    backgoroun-color: #F8F9FC;
+    @-o-keyframes
+    #F1F4F6
+} */
