--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 * {
     margin: 0px;
     padding: 0px;
     /*font-family: sans-serif;*/
-    font-family: 'Lora', serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
 }
 
 body {
@@ -27,12 +29,12 @@ a:focus {
 }
 
 .navbar {
-    padding: 15px 10px;
-    background: #fff;
+    padding: 11px 2px;
+    background: #fff !important;
     border: none;
     border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    box-shadow: 1px 0px 4px #aeaeae47;
 }
 
 .navbar-btn {
@@ -67,9 +69,10 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background:  #dcedc8;
     color: #fff;
     transition: all 0.3s;
+    border-right: 1px solid #cccccc26;
 }
 
 #sidebar.active {
@@ -77,15 +80,18 @@ a:focus {
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
-    background: #6d7fcc;
+    text-align: center;
+    background: #8bc34a;
+    padding: 10.2px 0 8px 0;
 }
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
-}
 
+}
+#sidebar ul.components li{
+    border-bottom: 1px solid #ffffff2e;
+}
 #sidebar ul p {
     color: #fff;
     padding: 10px;
@@ -93,22 +99,25 @@ a:focus {
 
 #sidebar ul li a {
     padding: 10px;
-    font-size: 1.1em;
+    font-size: 14px;
     display: block;
-    color: white;
+    color: #000;
+    text-transform: capitalize;
     text-decoration: none;
 }
 
 #sidebar ul li a:hover {
-    color: #358597;
+    color:  #8bc34a;
     background: #fff;
+    border-right: 2px solid #8bc34a;
     text-decoration: none;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+    color:  #8bc34a;
+    background: #fff;
+    border-right: 2px solid #8bc34a;
 }
 
 a[data-toggle="collapse"] {
@@ -126,7 +135,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: ##aed581;
     text-decoration: none;
 }
 
@@ -160,8 +169,7 @@ a.article:hover {
 
 #content {
     width: 100%;
-    padding: 20px;
-    min-height: 100vh;
+   min-height: 100vh;
     transition: all 0.3s;
 }
 
@@ -182,7 +190,12 @@ a.article:hover {
     }
 }
 
-
+#sidebarCollapse{
+    border: 1px solid #8bc34a;
+}
+#sidebarCollapse:hover{
+   background: #dcedc8;
+}
 /* client-managemet-table-th-color */
 
 .table-info,
@@ -362,3 +375,41 @@ a.article:hover {
 }
 /*LoginPage Modal End*/
 
+/*table  design
+*/
+.table-card {
+   border: 1px solid #cccccc47
+}
+.table-card .card-header{
+    background: #fff;
+    border-bottom: 1px solid #cccccc47;
+}
+.table-card .card-header h3{
+    color: #8bc34a;
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    padding-top: 4px;
+}
+.table-card .card-header h3 i{
+    font-size: 14px;
+}
+.table-card  .card-body{
+    margin: 0;
+}
+
+.table-card .table-bordered {
+    border: 1px solid #cccccc48;
+    border-right-width: 1px;
+    border-top: none;
+}
+.table-card .table thead th{
+    border-bottom: none;
+}
+.table-card .table-bordered td,.table-card .table-bordered th {
+    border-color: #cccccc48 !important;
+}
+.btn-info.btn-base{
+   background:  #8bc34a !important;
+    border-color:  #8bc34a !important;
+}
