--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,9 @@ a.article:hover {
 	font-size: 26px;
 	margin: 30px 0 -15px;
 }
+.form-control{
+    padding: 8.4px !important;
+}
 .modal-login .form-control:focus {
 	border-color: #70c5c0;
 }
