--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,10 @@ a.article:hover {
 	font-size: 26px;
 	margin: 30px 0 -15px;
 }
- 
+ .form-group input {
+    height: auto !important;
+    min-height: 38px !important;
+}
 .modal-login .form-control:focus {
 	border-color: #70c5c0;
 }
