--- a/css/style.css
+++ b/css/style.css
@@ -723,4 +723,20 @@ a.article:hover {
         margin-right: 10px;
     }
     
+    .disapproved{
+       background: #feedef;
+border: 1px solid #fdd1d6;
+color: #ef2f45;
+font-size: 13px;
+padding: 3px 9px;
+border-radius: 3px;
+    }
+    .approved{
+       background: #f3faea;
+border: 1px solid #78ca23;
+color: #78ca23;
+font-size: 13px;
+padding: 3px 9px;
+border-radius: 3px;
+    }
   
