--- a/css/style.css
+++ b/css/style.css
@@ -722,7 +722,9 @@ a.article:hover {
     .mr10{
         margin-right: 10px;
     }
-    
+    .mb0{
+        margin-bottom: 0;
+    }
     .disapproved{
        background: #feedef;
 border: 1px solid #fdd1d6;
