--- a/css/style.css
+++ b/css/style.css
@@ -195,96 +195,97 @@ a.article:hover {
     background-color:white !important;
 }
 .edit-btn {
-    color:#0171c4; 
+    color:#0171c4;
     font-size: 27px !important;
 }
 .delete-btn {
-    font-size: 25px !important; 
+    font-size: 25px !important;
     color:#ff4700;
 }
 
 
 
 /*LoginPage Modal Start*/
+body {font-family: Arial, Helvetica, sans-serif;}
 
-.modal-login {
-	color: #636363;
-	width: 350px;
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
-.modal-login .modal-content {
-	padding: 20px;
-	border-radius: 5px;
-	border: none;
+
+.imgcontainer img {
+  width: 25%;
+  border-radius: 50%;
 }
-.modal-login .modal-header {
-	border-bottom: none;
-	position: relative;
-	justify-content: center;
+
+.login-form{
+    border: 2px solid #bdbdbd;
+    width: 50%;
+    margin: auto;
 }
-.modal-login h4 {
-	text-align: center;
-	font-size: 26px;
-	margin: 30px 0 -15px;
+
+.login-form b{
+    color: #26a69a;
 }
-.modal-login .form-control:focus {
-	border-color: #70c5c0;
+
+/* Set a style for all buttons */
+.login {
+  background-color: #26a69a;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
-.modal-login .form-control, .modal-login .btn {
-	min-height: 40px;
-	border-radius: 3px;
+
+button:hover {
+  opacity: 0.8;
 }
-.modal-login .close {
-	position: absolute;
-	top: -5px;
-	right: -5px;
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #bdbdbd;
+    border: none;
 }
-.modal-login .modal-footer {
-	background: #ecf0f1;
-	border-color: #dee4e7;
-	text-align: center;
-	justify-content: center;
-	margin: 0 -20px -20px;
-	border-radius: 5px;
-	font-size: 13px;
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
 }
-.modal-login .modal-footer a {
-	color: #999;
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
 }
-.modal-login .avatar {
-	position: absolute;
-	margin: 0 auto;
-	left: 0;
-	right: 0;
-	top: -70px;
-	width: 95px;
-	height: 95px;
-	border-radius: 50%;
-	z-index: 9;
-	background: #60c7c1;
-	padding: 15px;
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+
+.container {
+  padding: 16px;
 }
-.modal-login .avatar img {
-	width: 100%;
+
+span.psw {
+  float: right;
+  padding-top: 16px;
 }
-.modal-login.modal-dialog {
-	margin-top: 80px;
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
 }
-.modal-login .btn, .modal-login .btn:active {
-	color: #fff;
-	border-radius: 4px;
-	background: #60c7c1 !important;
-	text-decoration: none;
-	transition: all 0.4s;
-	line-height: normal;
-	border: none;
-}
-.modal-login .btn:hover, .modal-login .btn:focus {
-	background: #45aba6 !important;
-	outline: none;
-}
-.trigger-btn {
-	display: inline-block;
-	margin: 100px auto;
-}
+
+
 /*LoginPage Modal End*/
