--- a/css/style.css
+++ b/css/style.css
@@ -1143,3 +1143,7 @@ a.article:hover {
 .dropdown.bootstrap-select .dropdown-menu.show{
     width: 320px !important;
 }
+.btn-light {
+    background-color: #fff;
+    border-color: #ccc;
+}
